ci: dispatch events on push only for specific files

--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -3,6 +3,10 @@ name: Dispatch events
 on:
   push:
     branches: [ main ]
+    paths:
+      - '**.md'
+      - '**.xsd'
+      - '!README.md'
 
 jobs:
   dispatch:
