--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -15,7 +15,6 @@ jobs:
       - name: Install xmllint
         run: sudo apt-get install -y libxml2-utils
       - name: Download XSD Schema
-        run: |
-          echo "XSD=$(curl -s http://www.w3.org/2009/XMLSchema/XMLSchema.xsd)" >> $GITHUB_ENV
-      - run: find . -type f -name "*.xsd" -exec xmllint -noout -schema ${{ env.XSD }} {} +
-      - run: xmllint -schema ${{ env.XSD }} ./drafts/v2.1/ComicInfo.xsd
+        run: curl -s http://www.w3.org/2009/XMLSchema/XMLSchema.xsd -o XSD-1.1.xsd
+      - run: find . -type f -name "*.xsd" -exec xmllint -noout -schema XSD-1.1.xsd {} +
+      - run: xmllint -schema XSD-1.1.xsd ./drafts/v2.1/ComicInfo.xsd
