--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -12,11 +12,10 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Install xmllint
         run: sudo apt-get install -y libxml2-utils
       - name: Download XSD Schema
         run: curl -s http://www.w3.org/2009/XMLSchema/XMLSchema.xsd -o XSD-1.1.xsd
-      - run: find . -type f -name "*.xsd"
-      - run: find . -type f -name "*.xsd" -exec xmllint -schema XSD-1.1.xsd {} +
-      - run: ls -al ./drafts/v2.1/
-      - run: xmllint -schema XSD-1.1.xsd ./drafts/v2.1/ComicInfo.xsd
+      - run: find . -type f -name "*.xsd" -exec xmllint -noout -schema XSD-1.1.xsd {} +
+      - run: xmllint -noout -schema XSD-1.1.xsd ./drafts/v2.1/ComicInfo.xsd
