--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: apt-get update
+        run: sudo apt-get update -y
       - name: Install xmllint
         run: sudo apt-get install -y libxml2-utils
       - name: Validate XSD Schemas
